# docfusiondb

./: API_GUIDE.md  Cargo.toml  Dockerfile  PHASE1_SUMMARY.md  README.md  README_OLD.md  ROADMAP.md  TWEETS.md  benchmark_results.md  config.yaml  docker‑compose.yml  test_api.sh
.github/workflows/: auto-release.yml  ci-cd.yml  ci.yml
benches/: bench.rs  document_operations.rs
demo/: README.md  index.html
docs/: integration_notes.md  roadmap.md
migrations/: 001_add_timestamps.sql
scripts/: README.md  benchmark.py  demo_quick.sh  run_benchmarks.sh  test_api.sh
src/: auth.rs  cache.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs
src/api/: mod.rs
src/tests/: api_tests.rs  mod.rs
