[package]
name = "docfusiondb"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
datafusion = "46.0.1"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
once_cell = "1.21.3"
serde_json = "1.0.140"
tokio =  { version = "1.44.2", features = ["rt-multi-thread", "macros"] } 
tokio-postgres = "0.7.13"
