[package]
name = "docfusiondb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.36", features = ["derive"] }
criterion = { version = "0.5.1", features = ["async_tokio"] }
datafusion = "46.0.1"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
once_cell = "1.21.3"
serde_json = "1.0.140"
tokio =  { version = "1.44.2", features = ["rt-multi-thread", "macros"] } 
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }

[lib]
name = "docfusiondb"
path = "src/lib.rs"
