[package]
name = "docfusiondb"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.36", features = ["derive"] }
criterion = { version = "0.5.1", features = ["async_tokio"] }
datafusion = "46.0.1"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio =  { version = "1.44.2", features = ["rt-multi-thread", "macros"] } 
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1", "with-chrono-0_4"] }
deadpool-postgres = "0.12"
num_cpus = "1.16"
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

[dev-dependencies]
tempfile = "3.14"
reqwest = { version = "0.12", features = ["json"] }

[lib]
name = "docfusiondb"
path = "src/lib.rs"
